2016-03-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/GSXML.h:
        * Source/Additions/GSXML.m:
        * Source/GSHTTPURLHandle.m:
        * Source/NSConnection.m:
        * Source/NSDistantObject.m:
        * Source/NSURLHandle.m:
        * Source/NSURLRequest.m:
	Make -setDebug: consistently set/return an integer even if the
	underlying meaning is boolean.  Avoid compiler warnings when
	calling the method on an id and signature is not known.

2016-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m:
	* Source/NSTimeZone.m:
	Use NSInteger conmsistently (don't mix with int).

2016-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Log is we break the lock.
	* Source/NSDistributedLock.m: Unlock if dealloc'ed while locked.

2016-03-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Remove five year old code for converting
	old style single defaults file to new style (one file per domain).
	Add some thread safety locks for distriobuted locking in case some
	thread issue is causing Riccardo's problem.

2016-03-11	Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSPredicate.h:
	Include NSString.h so that we the header knows about NSString
	conforming to NSCopying.

2016-03-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSDictionary.m:
	* Source/GSSet.m:
	* Source/GSString.m:
	* Source/NSArray.m:
	* Source/NSBundle.m:
	* Source/NSFileManager.m:
	* Source/NSJSONSerialization.m:
	* Source/NSPointerArray.m:
	* Source/NSPredicate.m:
	* Source/NSPropertyList.m:
	* Source/NSSerializer.m:
	* Source/NSSet.m:
	* Source/NSSortDescriptor.m:
	* Source/NSString.m:
	* Source/NSTimeZone.m:
	* Source/NSUserDefaults.m:
	Deprecate -makeImmutableCopyOnFail: and replace with -makeImmutable.